--- a/views/target_templates.xml
+++ b/views/target_templates.xml
@@ -2,28 +2,6 @@
 
 <openerp>
     <data>
-
-        <!-- Templates Attachments -->
-        <record id="mail_attach_1" model="ir.attachment">
-            <field name="datas_fname">БизнисМрежа.мк - општи услови.pdf</field>
-            <field name="name">БизнисМрежа.мк - општи услови.pdf</field>
-            <field name="datas" type="base64" file="target_features/static/src/attachments/БизнисМрежа.мк - општи услови.pdf"/>
-        </record>
-        <record id="mail_attach_2" model="ir.attachment">
-            <field name="datas_fname">Опис на модули на БизнисМрежа.мк.pdf</field>
-            <field name="name">Опис на модули на БизнисМрежа.мк.pdf</field>
-            <field name="datas" type="base64" file="target_features/static/src/attachments/Опис на модули на БизнисМрежа.мк.pdf"/>
-        </record>
-        <record id="mail_attach_3" model="ir.attachment">
-            <field name="datas_fname">Табела на тарифирање.pdf</field>
-            <field name="name">Табела на тарифирање.pdf</field>
-            <field name="datas" type="base64" file="target_features/static/src/attachments/Табела на тарифирање.pdf"/>
-        </record>
-        <record id="mail_attach_4" model="ir.attachment">
-            <field name="datas_fname">УПАТСТВО ЗА КОРИСТЕЊЕ Верзија 1.3.pdf</field>
-            <field name="name">УПАТСТВО ЗА КОРИСТЕЊЕ Верзија 1.3.pdf</field>
-            <field name="datas" type="base64" file="target_features/static/src/attachments/УПАТСТВО ЗА КОРИСТЕЊЕ Верзија 1.3.pdf"/>
-        </record>
     
         <!-- Email Templates -->
         <!-- Prepaid Users -->
@@ -136,6 +114,45 @@
     <hr/>
     <small>Ве молиме да не ја печатите оваа електронска порака доколку не е потребно! Мислете на природата! </small>
 </p>
+                ]]>
+            </field>
+        </record>
+        
+        <!-- Contract Expiration (3 Months) -->
+        <record id="mail_contract_expiration_3" model="email.template">
+            <field name="name">Contract Expiration (3 Months)</field>
+            <field name="model_id" ref="analytic.model_account_analytic_account"/>
+            <field name="email_from">${user.email or ''}</field>
+            <field name="email_to">${object.partner_id.email|safe}</field>
+            <field name="subject">Contract Expiration (3 Months)</field>
+            <field name="body_html"><![CDATA[
+<p>Your contract will expire in 3 months. </p>
+                ]]>
+            </field>
+        </record>
+        
+        <!-- Contract Expiration (2 Months) -->
+        <record id="mail_contract_expiration_2" model="email.template">
+            <field name="name">Contract Expiration (2 Months)</field>
+            <field name="model_id" ref="analytic.model_account_analytic_account"/>
+            <field name="email_from">${user.email or ''}</field>
+            <field name="email_to">${object.partner_id.email|safe}</field>
+            <field name="subject">Contract Expiration (2 Months)</field>
+            <field name="body_html"><![CDATA[
+<p>Your contract will expire in 2 months. </p>
+                ]]>
+            </field>
+        </record>
+        
+        <!-- Contract Expiration (1 Month) -->
+        <record id="mail_contract_expiration_1" model="email.template">
+            <field name="name">Contract Expiration (1 Month)</field>
+            <field name="model_id" ref="analytic.model_account_analytic_account"/>
+            <field name="email_from">${user.email or ''}</field>
+            <field name="email_to">${object.partner_id.email|safe}</field>
+            <field name="subject">Contract Expiration (1 Month)</field>
+            <field name="body_html"><![CDATA[
+<p>Your contract will expire in 1 month. </p>
                 ]]>
             </field>
         </record>
