--- a/views/target_views.xml
+++ b/views/target_views.xml
@@ -46,12 +46,106 @@
                 <xpath expr="//field[@name='title']" position="after">
                     <field name="partner_url" widget="url"/>
                 </xpath>
+                <xpath expr="//notebook" position="inside">
+                    <page string="Old Notes">
+                        <field name="old_notes"/>
+                    </page>
+                </xpath>
+                <xpath expr="//field[@name='function']" position="replace">
+                    <field name="note_ids" widget="many2many_tags"/>
+                </xpath>
+            </field>
+        </record>
+        
+        <!-- Stat Buttons invisible for Farmer -->
+        <record id="view_res_partner_target_farmer_form" model="ir.ui.view">
+            <field name="name">res.partner.target.farmer.form</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="sale.res_partner_view_buttons"/>
+            <field name="groups_id" eval="[(4, ref('target_features.role_target_farmer_res_groups'))]"/>
+            <field name="arch" type="xml">
+                <xpath expr="//div[@name='buttons']" position="replace">
+                    <div class="oe_right oe_button_box" name="buttons">
+                        <button class="oe_inline oe_stat_button" type="object" name="schedule_meeting" icon="fa-calendar" context="{'partner_id': active_id}">
+                            <field string="Meetings" name="meeting_count" widget="statinfo"/>
+                        </button>
+                        <button class="oe_inline oe_stat_button" type="action" name="135" icon="fa-phone" context="{'search_default_partner_id': active_id, 'default_duration': 1.0}">
+                            <field string="Calls" name="phonecall_count" widget="statinfo"/>
+                        </button>
+                    </div>                    
+                </xpath>
+            </field>
+        </record>
+        
+        <record id="view_res_partner_so_target_farmer_form" model="ir.ui.view">
+            <field name="name">res.partner.so.target.farmer.form</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="sale.res_partner_view_buttons"/>
+            <field name="groups_id" eval="[(4, ref('target_features.role_target_farmer_res_groups'))]"/>
+            <field name="arch" type="xml">
+                <xpath expr="//button[1]" position="attributes">
+                    <attribute name="invisible">1</attribute>               
+                </xpath>
+            </field>
+        </record>
+        
+        <record id="view_crm_lead_target_form" model="ir.ui.view">
+            <field name="name">crm.lead.form</field>
+            <field name="model">crm.lead</field>
+            <field name="inherit_id" ref="marketing_crm.view_crm_lead_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='source_id']" position="before">
+                    <field name="source_readonly" invisible="1"/>
+                </xpath>
+                <xpath expr="//field[@name='source_id']" position="attributes">
+                    <attribute name="attrs">{'readonly': [('source_readonly', '=', True)]}</attribute>
+                </xpath>
+            </field>
+        </record>
+        
+        <record id="view_crm_lead_target_farmer_form" model="ir.ui.view">
+            <field name="name">crm.lead.farmer.form</field>
+            <field name="model">crm.lead</field>
+            <field name="inherit_id" ref="marketing_crm.view_crm_lead_form"/>
+            <field name="groups_id" eval="[(4, ref('target_features.role_target_farmer_res_groups'))]"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='user_id']" position="attributes">
+                    <attribute name="readonly">1</attribute>
+                </xpath>
+                <xpath expr="//field[@name='section_id']" position="attributes">
+                    <attribute name="readonly">1</attribute>
+                </xpath>
+            </field>
+        </record>
+        
+        <record id="view_crm_lead_target_search" model="ir.ui.view">
+            <field name="name">crm.own.leads.search</field>
+            <field name="model">crm.lead</field>
+            <field name="inherit_id" ref="crm.view_crm_case_leads_filter"/>
+            <field name="arch" type="xml">
+                <xpath expr="//filter[1]" position="attributes">
+                    <attribute name="name">my_leads</attribute>
+                </xpath>
+            </field>
+        </record>
+        
+        <record id="view_crm_case_stage_target_form" model="ir.ui.view">
+            <field name="name">crm.case.stage.form</field>
+            <field name="model">crm.case.stage</field>
+            <field name="inherit_id" ref="crm.crm_case_stage_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='case_default']" position="after">
+                    <field name="farmer_visible"/>
+                </xpath>
             </field>
         </record>
         
         <!-- Actions -->
         <record id="sale.action_quotations" model="ir.actions.act_window">
             <field name="domain">[('state','in',('draft', 'approved', 'sent', 'cancel'))]</field>
+        </record>
+        <record id="crm.crm_case_category_act_leads_all" model="ir.actions.act_window">
+            <field name="context">{'default_type': 'lead', 'stage_type': 'lead', 'needaction_menu_ref': 'crm.menu_crm_opportunities', 'search_default_my_leads': 1}</field>
         </record>
             
     </data>            
