--- a/wizard/import_partners_leads_wiz.xml
+++ b/wizard/import_partners_leads_wiz.xml
@@ -32,7 +32,7 @@
         </record>
            
         <menuitem id="menu_import_partners" name="Import Leads" parent="base.menu_sales"
-                  action="action_import_partners" sequence="15"/>
+                  action="action_import_partners" sequence="15" groups="target_features.role_target_manager_res_groups"/>
             
     </data>            
 </openerp>
