--- a/views/target_views.xml
+++ b/views/target_views.xml
@@ -159,7 +159,7 @@
             <field name="inherit_id" ref="account.invoice_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='invoice_open']" position="attributes">
-                    <attribute name="groups">target_features.role_target_accountant_res_groups</attribute>
+                    <attribute name="groups">target_features.role_target_accountant_res_groups,target_features.role_target_manager_res_groups</attribute>
                 </xpath>
             </field>
         </record>
