--- a/views/target_views.xml
+++ b/views/target_views.xml
@@ -17,6 +17,18 @@
                             class="oe_highlight" attrs="{'invisible': ['|', ('second_approval', '=', False), ('state', '!=', 'draft')]}"
                             groups="target_features.role_target_manager_res_groups"/>
                 </xpath>
+                <xpath expr="//button[@name='action_quotation_send']" position="attributes">
+                    <attribute name="states">draft,approved</attribute>
+                </xpath>
+                <xpath expr="//button[@name='print_quotation']" position="attributes">
+                    <attribute name="states">draft,approved</attribute>
+                </xpath>
+                <xpath expr="//button[@name='action_button_confirm']" position="attributes">
+                    <attribute name="states">draft,approved</attribute>
+                </xpath>
+                <xpath expr="//button[@name='cancel']" position="attributes">
+                    <attribute name="states">draft,approved,sent</attribute>
+                </xpath>
             </field>
         </record>
         
