--- a/views/target_views.xml
+++ b/views/target_views.xml
@@ -47,6 +47,17 @@
             </field>
         </record>
         
+        <record id="view_sale_order_target_tree" model="ir.ui.view">
+            <field name="name">sale.order.target.tree</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_quotation_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//tree" position="attributes">
+                    <attribute name="colors">grey:state=='cancel';blue:state in ('waiting_date','manual');red:state in ('invoice_except','shipping_except');green:state in ('waiting_approval');</attribute>
+                </xpath>
+            </field>
+        </record>
+        
         <record id="view_contract_target_form" model="ir.ui.view">
             <field name="name">contract.target.form</field>
             <field name="model">account.analytic.account</field>
