[IMP] multiple fixes and improvements

--- a/views/activation_templates.xml
+++ b/views/activation_templates.xml
@@ -25,7 +25,7 @@
 </p>
 <p>Ве молиме да извршите промена на лозинката во “Моја БизнисМрежа” со притискање на <b>промени податоци</b>. </p>         
 
-<img src="/target_features/static/src/img/activation.jpg" style="max-width: 444px;"/>
+<img src="http://targetgroup.mk/wp-content/uploads/2019/03/activation.jpg" style="max-width: 444px;"/>
 
 <p>Ве молиме детално да ги прочитате општите услови за користење на БизнисМрежа и да не известите дали се согласувате со истите во рок од 5 работни дена. Доколку не добиеме повратен одговор во рок од 5 работни дена, ќе сметаме дека целосно се согласувате и ги прифаќате општите услови. </p>
 <p>За било какви прашања околу апликацијата контактирајте го вашиот личен советник. </p>
@@ -46,7 +46,7 @@
 <p>
     <b style="color: red;"><i>Успех е да се биде во тек со промените</i></b><br/>
     <a href="http://targetgroup.mk/">
-      <img src="/target_features/static/src/img/logo.jpg" style="max-width: 156px;"/>
+      <img src="http://targetgroup.mk/wp-content/uploads/2019/03/logo.jpg" style="max-width: 156px;"/>
     </a>
 </p>
 <p class="text-muted">
@@ -82,7 +82,7 @@
 </p>
 <p>Ве молиме да извршите промена на лозинката во “Моја БизнисМрежа” со притискање на <b>промени податоци</b>. </p>         
 
-<img src="/target_features/static/src/img/activation.jpg" style="max-width: 444px;"/>
+<img src="http://targetgroup.mk/wp-content/uploads/2019/03/activation.jpg" style="max-width: 444px;"/>
 
 <p>Ве молиме детално да ги прочитате општите услови за користење на БизнисМрежа и да не известите дали се согласувате со истите во рок од 5 работни дена. Доколку не добиеме повратен одговор во рок од 5 работни дена, ќе сметаме дека целосно се согласувате и ги прифаќате општите услови. </p>
 <p>За било какви прашања околу апликацијата контактирајте го вашиот личен советник. </p>
@@ -103,7 +103,7 @@
 <p>
     <b style="color: red;"><i>Успех е да се биде во тек со промените</i></b><br/>
     <a href="http://targetgroup.mk/">
-      <img src="/target_features/static/src/img/logo.jpg" style="max-width: 156px;"/>
+      <img src="http://targetgroup.mk/wp-content/uploads/2019/03/logo.jpg" style="max-width: 156px;"/>
     </a>
 </p>
 <p class="text-muted">
