--- a/views/expiration_templates.xml
+++ b/views/expiration_templates.xml
@@ -38,7 +38,7 @@
 <p>
     <b style="color: red;"><i>Успех е да се биде во тек со промените</i></b><br/>
     <a href="http://targetgroup.mk/">
-      <img src="/target_features/static/src/img/logo.jpg" style="max-width: 156px;"/>
+      <img src="http://targetgroup.mk/wp-content/uploads/2019/03/logo.jpg" style="max-width: 156px;"/>
     </a>
 </p>
                 ]]>
@@ -74,7 +74,7 @@
 <p>
     <b style="color: red;"><i>Успех е да се биде во тек со промените</i></b><br/>
     <a href="http://targetgroup.mk/">
-      <img src="/target_features/static/src/img/logo.jpg" style="max-width: 156px;"/>
+      <img src="http://targetgroup.mk/wp-content/uploads/2019/03/logo.jpg" style="max-width: 156px;"/>
     </a>
 </p>
                 ]]>
@@ -112,7 +112,7 @@
 <p>
     <b style="color: red;"><i>Успех е да се биде во тек со промените</i></b><br/>
     <a href="http://targetgroup.mk/">
-      <img src="/target_features/static/src/img/logo.jpg" style="max-width: 156px;"/>
+      <img src="http://targetgroup.mk/wp-content/uploads/2019/03/logo.jpg" style="max-width: 156px;"/>
     </a>
 </p>
                 ]]>
