--- a/views/mail_views.xml
+++ b/views/mail_views.xml
@@ -12,7 +12,7 @@
                         <button name="send" string="Send Now" type="object" states="outgoing" class="oe_highlight"/>
                         <button name="mark_outgoing" string="Retry" type="object" states="exception,cancel"/>
                         <button name="cancel" string="Cancel" type="object" states="outgoing"/>
-                        <field name="state" widget="statusbar" statusbar_visible="outgoing,sent,received,exception,cancel"/>
+                        <field name="state" widget="statusbar" statusbar_visible="outgoing,sent,exception,cancel"/>
                     </header>
                     <sheet>
                         <field name="mail_message_id" required="0" invisible="1"/>
